--- a/multivm/Vagrantfile
+++ b/multivm/Vagrantfile
@@ -5,12 +5,14 @@ Vagrant.configure("2") do |config|
         vm1.vm.provider "virtualbox" do |vbox1|
             vbox1.memory = 512  
         end   
+        vm1.vm.network "private_network", type: "dhcp"
     end
     
     config.vm.provision "shell" do |s1|
         ssh_pub_key = 
 File.readlines("/home/lenka/.ssh/id_rsa.pub").first.strip
     s1.inline = <<-SHELL
+        mkdir /root/.ssh
 	echo #{ssh_pub_key} >> /home/vagrant/.ssh/authorized_keys
         echo #{ssh_pub_key} >> /root/.ssh/authorized_keys
     SHELL
@@ -21,6 +23,7 @@ File.readlines("/home/lenka/.ssh/id_rsa.pub").first.strip
         vm2.vm.provider "virtualbox" do |vbox2|
             vbox2.memory = 512
         end
+        vm2.vm.network "private_network", type: "dhcp"
     end
 
     config.vm.provision "shell" do |s2|
@@ -38,6 +41,7 @@ File.readlines("/home/lenka/.ssh/id_rsa.pub").first.strip
         vm3.vm.provider "virtualbox" do |vbox3|
             vbox3.memory = 512
         end
+        vm3.vm.network "private_network", type: "dhcp"
     end
 
     config.vm.provision "shell" do |s3|
@@ -55,6 +59,7 @@ File.readlines("/home/lenka/.ssh/id_rsa.pub").first.strip
         vm4.vm.provider "virtualbox" do |vbox4|
             vbox4.memory = 512
         end
+        vm4.vm.network "private_network", type: "dhcp"
     end
 
 config.vm.provision "shell" do |s4|
@@ -65,7 +70,4 @@ File.readlines("/home/lenka/.ssh/id_rsa.pub").first.strip
         echo #{ssh_pub_key} >> /root/.ssh/authorized_keys
     SHELL
     end
-
-
-
 end
